@@ -5,6 +5,7 @@ Version CVS HEAD (?)
     - Dev-C++ (win32) project file is automatically updated with
       the version info from configure.in
     - the configure script can now be used in Windows with MSYS
+    - added a mainpage for the Doxygen API documentation
 
   * src/DLS.cpp, src/DLS.h:
     - added Sampler::AddSampleLoop() and Sampler::DeleteSampleLoop() methods
